# tele-bot-dich

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: TODO.md  ghi chú.md  openapi.yaml
src/tele_bot_dich/: __init__.py  __main__.py  bot.py  commands.py  config.py
src/tele_bot_dich/handlers/: __init__.py  settings.py  start.py  translate.py
src/tele_bot_dich/models/: __init__.py  user_settings.py
src/tele_bot_dich/services/: __init__.py  language_detector.py  openai_translator.py  rate_limiter.py
src/tele_bot_dich/utils/: __init__.py  formatters.py  logger.py
tests/: conftest.py  test_handlers.py  test_language_detector.py  test_openai_translator.py  test_rate_limiter.py
